[tool.poetry]
name = "dscweb"
version = "1.0.0"
description = "Website for dscrecbijnor club"
authors = ["Kumar Shanu"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "3.2.12"
django-ckeditor = "^6.1.0"
django-allauth = "^0.44.0"
Pillow = "^9.0.0"


[tool.poetry.dev-dependencies]
autopep8="*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
